# AutomataAnalysis

./: .gitignore  BackToFirstDFA.cpp  BackToFirstDFA.h  CMakeLists.txt  CMakePresets.json  FindFLINT.cmake  FindGMP.cmake  Findmgl.cmake  FullBinaryTreeGenerator.h  GraphBasedPDFAEnumerator.cpp  GraphBasedPDFAEnumerator.h  InfTwoRegularDigraphBackToZero.cpp  InfTwoRegularDigraphBackToZero.h  MP0DFA.cpp  MP0DFA.h  PDFA.cpp  PDFA.h  PerfectBinaryTree.cpp  PerfectBinaryTree.h  ProductDFAExperiment.cpp  ProductDFAExperiment.h  ProductPDFA.cpp  ProductPDFA.h  README.md  RegPDFA.cpp  RegPDFA.h  RegPDFAGenerator.cpp  RegPDFAGenerator.h  SeriesGenerator.cpp  SeriesGenerator.h  StateLabel.cpp  StateLabel.h  TreePolynomial.cpp  TreePolynomial.h  TwoRegularDigraph.cpp  TwoRegularDigraph.h  VectorEnumerator.cpp  VectorEnumerator.h  VectorNGenerator.h  arb_fmpz_mpoly_acb_eval.h  (+21 more)
scripts/: build-windows-vcpkg.ps1
